# pygrep

./: .gitignore  MANIFEST.in  Makefile  Pipfile  README.md  entry_points.cfg  pyproject.toml  setup.cfg  tox.ini
benchmarks/: grep.py
pygrep/: __init__.py  grep.py  main.py  queue.py
tests/: test_grep.py  test_queue.py
