[metadata]
name = pygrep
version = 0.1.0
author = berquerant
description = partial grep
url = https://github.com/berquerant/pygrep
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    pygrep = pygrep
packages =
    pygrep
python_requires = >= 3.10
entry_points = file: entry_points.cfg